--- a/style.css
+++ b/style.css
@@ -82,3 +82,9 @@ PROJECTS
 #project .card-title {
   font-weight: bold;
 }
+.project-video {
+  width: 100%;
+  max-width: 300px;
+  height: 300px;
+  background-color: black;
+}
